// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util #convertFile should convert a file 1`] = `
"import * as React from 'react'
const SvgFile = (props) => (
  <svg xmlns="http://www.w3.org/2000/svg" width={48} height={1} {...props}>
    <path fill="#063855" fillRule="evenodd" d="M0 0h48v1H0z" />
  </svg>
)
export default SvgFile
"
`;

exports[`util #convertFile should support a custom config path 1`] = `
"import * as React from 'react'
const SvgFile = (props) => (
  <svg
    xmlns="http://www.w3.org/2000/svg"
    width="1em"
    height="1em"
    viewBox="0 0 48 1"
    {...props}
  >
    <path fill="#063855" fillRule="evenodd" d="M0 0h48v1H0z" />
  </svg>
)
export default SvgFile
"
`;
